5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1888_1658.log
== SUBMITION (2019-07-09 16:11:58) 
-- CODE:
from numpy import * 
y = zeros(a,int=dthype)
x= input("paises:").lower:
if(x=="CHN"):
	y[0]=y[0]+1
elif(x=="JPN"):
	y[1]=y[1]+1
elif(x=="KOR"):
	y[2]=Y[2]+1
elif(x=="MGL"):
	y[3]==y[3]+1
elif(x=="THA"):
	y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
0.559155
-- ERROR:
  File "/home/codebench/codes/1888/1658/main.py", line 3
    x= input().lower:
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:12:01) 
-- CODE:
from numpy import * 
y = zeros(a,int=dthype)
x= input("paises:").lower:
if(x=="CHN"):
	y[0]=y[0]+1
elif(x=="JPN"):
	y[1]=y[1]+1
elif(x=="KOR"):
	y[2]=Y[2]+1
elif(x=="MGL"):
	y[3]==y[3]+1
elif(x=="THA"):
	y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
0.534617
-- ERROR:
  File "/home/codebench/codes/1888/1658/main.py", line 3
    x= input().lower:
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:12:03) 
-- CODE:
from numpy import * 
y = zeros(a,int=dthype)
x= input("paises:").lower:
if(x=="CHN"):
	y[0]=y[0]+1
elif(x=="JPN"):
	y[1]=y[1]+1
elif(x=="KOR"):
	y[2]=Y[2]+1
elif(x=="MGL"):
	y[3]==y[3]+1
elif(x=="THA"):
	y[4]==y[4]+1
print(y)

-- ERROR:
File "XXXX", line 3
    x= input().lower:
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:12:49) 
-- CODE:
from numpy import * 
y = zeros(a,int=dthype)
x = input("paises:"):
if(x=="CHN"):
	y[0]=y[0]+1
elif(x=="JPN"):
	y[1]=y[1]+1
elif(x=="KOR"):
	y[2]=Y[2]+1
elif(x=="MGL"):
	y[3]==y[3]+1
elif(x=="THA"):
	y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
0.900324
-- ERROR:
  File "/home/codebench/codes/1888/1658/main.py", line 3
    x = input():
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:12:51) 
-- CODE:
from numpy import * 
y = zeros(a,int=dthype)
x = input("paises:"):
if(x=="CHN"):
	y[0]=y[0]+1
elif(x=="JPN"):
	y[1]=y[1]+1
elif(x=="KOR"):
	y[2]=Y[2]+1
elif(x=="MGL"):
	y[3]==y[3]+1
elif(x=="THA"):
	y[4]==y[4]+1
print(y)

-- ERROR:
File "XXXX", line 3
    x = input():
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:12:54) 
-- CODE:
from numpy import * 
y = zeros(a,int=dthype)
x = input("paises:"):
if(x=="CHN"):
	y[0]=y[0]+1
elif(x=="JPN"):
	y[1]=y[1]+1
elif(x=="KOR"):
	y[2]=Y[2]+1
elif(x=="MGL"):
	y[3]==y[3]+1
elif(x=="THA"):
	y[4]==y[4]+1
print(y)

-- ERROR:
File "XXXX", line 3
    x = input():
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:13:13) 
-- CODE:
from numpy import * 
y = zeros(a,int=dtype)
x = input("paises:"):
if(x=="CHN"):
	y[0]=y[0]+1
elif(x=="JPN"):
	y[1]=y[1]+1
elif(x=="KOR"):
	y[2]=Y[2]+1
elif(x=="MGL"):
	y[3]==y[3]+1
elif(x=="THA"):
	y[4]==y[4]+1
print(y)

-- ERROR:
File "XXXX", line 3
    x = input():
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:13:28) 
-- CODE:
from numpy import * 
y = zeros(a , int=dtype)
x = input("paises:"):
if(x=="CHN"):
	y[0]=y[0]+1
elif(x=="JPN"):
	y[1]=y[1]+1
elif(x=="KOR"):
	y[2]=Y[2]+1
elif(x=="MGL"):
	y[3]==y[3]+1
elif(x=="THA"):
	y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
0.81166
-- ERROR:
  File "/home/codebench/codes/1888/1658/main.py", line 3
    x = input():
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:21:54) 
-- CODE:
from numpy import * 
y = zeros(a ,dtype=int)
x = input("paises:"):
if(x=="CHN"):
	y[0]=y[0]+1
elif(x=="JPN"):
	y[1]=y[1]+1
elif(x=="KOR"):
	y[2]=Y[2]+1
elif(x=="MGL"):
	y[3]==y[3]+1
elif(x=="THA"):
	y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
0.873674
-- ERROR:
  File "/home/codebench/codes/1888/1658/main.py", line 3
    x = input():
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:22:09) 
-- CODE:
from numpy import * 
y = zeros(5 ,dtype=int)
x = input("paises:"):
if(x=="CHN"):
	y[0]=y[0]+1
elif(x=="JPN"):
	y[1]=y[1]+1
elif(x=="KOR"):
	y[2]=Y[2]+1
elif(x=="MGL"):
	y[3]==y[3]+1
elif(x=="THA"):
	y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
0.641526
-- ERROR:
  File "/home/codebench/codes/1888/1658/main.py", line 3
    x = input():
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:22:11) 
-- CODE:
from numpy import * 
y = zeros(5 ,dtype=int)
x = input("paises:"):
if(x=="CHN"):
	y[0]=y[0]+1
elif(x=="JPN"):
	y[1]=y[1]+1
elif(x=="KOR"):
	y[2]=Y[2]+1
elif(x=="MGL"):
	y[3]==y[3]+1
elif(x=="THA"):
	y[4]==y[4]+1
print(y)

-- ERROR:
File "XXXX", line 3
    x = input():
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:23:00) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = input("paises:"):
if(x=="CHN"):
	y[0]=y[0]+1
elif(x=="JPN"):
	y[1]=y[1]+1
elif(x=="KOR"):
	y[2]=Y[2]+1
elif(x=="MGL"):
	y[3]==y[3]+1
elif(x=="THA"):
	y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
0.625994
-- ERROR:
  File "/home/codebench/codes/1888/1658/main.py", line 4
    x = input():
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:23:02) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = input("paises:"):
if(x=="CHN"):
	y[0]=y[0]+1
elif(x=="JPN"):
	y[1]=y[1]+1
elif(x=="KOR"):
	y[2]=Y[2]+1
elif(x=="MGL"):
	y[3]==y[3]+1
elif(x=="THA"):
	y[4]==y[4]+1
print(y)

-- ERROR:
File "XXXX", line 4
    x = input():
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:23:21) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = input("paises:")
if(x=="CHN"):
	y[0]=y[0]+1
elif(x=="JPN"):
	y[1]=y[1]+1
elif(x=="KOR"):
	y[2]=Y[2]+1
elif(x=="MGL"):
	y[3]==y[3]+1
elif(x=="THA"):
	y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
0.789917
-- TEST CASE 1:
---- input:
JPN,CHN,JPN,JPN,JPN,CHN,THA,MGL,CHN,CHN
---- correct output:
4
[4 4 0 1 1]
---- user output:
[0 0 0 0 0]
-- TEST CASE 2:
---- input:
MGL,KOR,CHN,MGL,JPN,JPN,THA,MGL,MGL,MGL,THA,JPN,MGL,CHN,CHN,THA,KOR,MGL,JPN,KOR,JPN,JPN,MGL,JPN
---- correct output:
8
[3 7 3 8 3]
---- user output:
[0 0 0 0 0]
-- TEST CASE 3:
---- input:
KOR,THA,KOR,THA,KOR,CHN,MGL,MGL,CHN,CHN,KOR
---- correct output:
4
[3 0 4 2 2]
---- user output:
[0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:23:23) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = input("paises:")
if(x=="CHN"):
	y[0]=y[0]+1
elif(x=="JPN"):
	y[1]=y[1]+1
elif(x=="KOR"):
	y[2]=Y[2]+1
elif(x=="MGL"):
	y[3]==y[3]+1
elif(x=="THA"):
	y[4]==y[4]+1
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:25:08) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:")))
if(x=="CHN"):
	y[0]=y[0]+1
elif(x=="JPN"):
	y[1]=y[1]+1
elif(x=="KOR"):
	y[2]=Y[2]+1
elif(x=="MGL"):
	y[3]==y[3]+1
elif(x=="THA"):
	y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
0.964239
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1658/main.py", line 4, in <module>
    x = array(eval(input()))
  File "<string>", line 1, in <module>
NameError: name 'JPN' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:25:09) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:")))
if(x=="CHN"):
	y[0]=y[0]+1
elif(x=="JPN"):
	y[1]=y[1]+1
elif(x=="KOR"):
	y[2]=Y[2]+1
elif(x=="MGL"):
	y[3]==y[3]+1
elif(x=="THA"):
	y[4]==y[4]+1
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:41:46) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:")))
if(x=="CHN"):
	y[0]=y[0]+1
elif(x=="JPN"):
	y[1]=y[1]+1
elif(x=="KOR"):
	y[2]=Y[2]+1
elif(x=="MGL"):
	y[3]==y[3]+1
elif(x=="THA"):
	y[4]==y[4]+1
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:42:21) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:").split()))
if(x=="CHN"):
	y[0]=y[0]+1
elif(x=="JPN"):
	y[1]=y[1]+1
elif(x=="KOR"):
	y[2]=Y[2]+1
elif(x=="MGL"):
	y[3]==y[3]+1
elif(x=="THA"):
	y[4]==y[4]+1
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:43:18) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split('')
if(x=="CHN"):
	y[0]=y[0]+1
elif(x=="JPN"):
	y[1]=y[1]+1
elif(x=="KOR"):
	y[2]=Y[2]+1
elif(x=="MGL"):
	y[3]==y[3]+1
elif(x=="THA"):
	y[4]==y[4]+1
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:43:50) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split('')
if(x=="CHN"):
	y[0]=y[0]+1
elif(x=="JPN"):
	y[1]=y[1]+1
elif(x=="KOR"):
	y[2]=Y[2]+1
elif(x=="MGL"):
	y[3]==y[3]+1
elif(x=="THA"):
	y[4]==y[4]+1
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:43:57) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
if(x=="CHN"):
	y[0]=y[0]+1
elif(x=="JPN"):
	y[1]=y[1]+1
elif(x=="KOR"):
	y[2]=Y[2]+1
elif(x=="MGL"):
	y[3]==y[3]+1
elif(x=="THA"):
	y[4]==y[4]+1
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:46:32) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in range(size(x)):
   if(x[i]=="CHN"):
	   y[0]=y[0]+1
	elif(x=="JPN"):
		y[1]=y[1]+1
	elif(x=="KOR"):
		y[2]=Y[2]+1
	elif(x=="MGL"):
		y[3]==y[3]+1
	elif(x=="THA"):
		y[4]==y[4]+1
print(y)

-- ERROR:
File "XXXX", line 8
    elif(x=="JPN"):
                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:47:08) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in range(size(x)):
   if(x[i]=="CHN"):
	   y[0]=y[0]+1
	elif(x[i]=="JPN"):
		y[1]=y[1]+1
	elif(x[i]=="KOR"):
		y[2]=Y[2]+1
	elif(x[i]=="MGL"):
		y[3]==y[3]+1
	elif(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
0.599894
-- ERROR:
  File "/home/codebench/codes/1888/1658/main.py", line 8
    elif(x[i]=="JPN"):
                     ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:47:10) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in range(size(x)):
   if(x[i]=="CHN"):
	   y[0]=y[0]+1
	elif(x[i]=="JPN"):
		y[1]=y[1]+1
	elif(x[i]=="KOR"):
		y[2]=Y[2]+1
	elif(x[i]=="MGL"):
		y[3]==y[3]+1
	elif(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- ERROR:
File "XXXX", line 8
    elif(x[i]=="JPN"):
                     ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:47:33) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in range(size(x)):
   if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- ERROR:
File "XXXX", line 8
    if(x[i]=="JPN"):
                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:48:05) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in range(size(x)):
   if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- ERROR:
File "XXXX", line 8
    if(x[i]=="JPN"):
                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:48:24) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in range x:
   if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
0.526621
-- ERROR:
  File "/home/codebench/codes/1888/1658/main.py", line 5
    for i in range x:
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:48:25) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in range x:
   if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- ERROR:
File "XXXX", line 5
    for i in range x:
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:48:39) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in x:
   if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
0.66363
-- ERROR:
  File "/home/codebench/codes/1888/1658/main.py", line 8
    if(x[i]=="JPN"):
                   ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:48:41) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in x:
   if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- ERROR:
File "XXXX", line 8
    if(x[i]=="JPN"):
                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:48:55) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in x:
   if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- ERROR:
File "XXXX", line 8
    if(x[i]=="JPN"):
                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:49:09) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in x:
	if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
0.828888
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1658/main.py", line 4, in <module>
    x = array(eval(input())).split(',')
  File "<string>", line 1, in <module>
NameError: name 'JPN' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:49:10) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in x:
	if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:54:20) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in x:
	if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
1.06774
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1658/main.py", line 4, in <module>
    x = array(eval(input())).split(',')
  File "<string>", line 1, in <module>
NameError: name 'JPN' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:54:31) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in x:
	if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
2.35267
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1658/main.py", line 4, in <module>
    x = array(eval(input())).split(',')
  File "<string>", line 1, in <module>
NameError: name 'JPN' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:54:34) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in x:
	if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
5.88571
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1658/main.py", line 4, in <module>
    x = array(eval(input())).split(',')
  File "<string>", line 1, in <module>
NameError: name 'JPN' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:54:35) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in x:
	if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
7.36969
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1658/main.py", line 4, in <module>
    x = array(eval(input())).split(',')
  File "<string>", line 1, in <module>
NameError: name 'MGL' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:54:36) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in x:
	if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
7.58798
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1658/main.py", line 4, in <module>
    x = array(eval(input())).split(',')
  File "<string>", line 1, in <module>
NameError: name 'JPN' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:54:37) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in x:
	if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
7.20744
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1658/main.py", line 4, in <module>
    x = array(eval(input())).split(',')
  File "<string>", line 1, in <module>
NameError: name 'JPN' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:54:38) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in x:
	if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
6.50209
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1658/main.py", line 4, in <module>
    x = array(eval(input())).split(',')
  File "<string>", line 1, in <module>
NameError: name 'MGL' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:54:45) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in x:
	if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
6.54315
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1658/main.py", line 4, in <module>
    x = array(eval(input())).split(',')
  File "<string>", line 1, in <module>
NameError: name 'KOR' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:54:46) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in x:
	if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
3.5839
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1658/main.py", line 4, in <module>
    x = array(eval(input())).split(',')
  File "<string>", line 1, in <module>
NameError: name 'JPN' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:54:46) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in range(size(x)):
	if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:54:46) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in x:
	if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
3.47482
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1658/main.py", line 4, in <module>
    x = array(eval(input("paises:"))).split(',')
  File "<string>", line 1, in <module>
NameError: name 'JPN' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:54:46) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in x:
	if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
3.48267
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1888/1658/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:54:49) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in range(size(x)):
	if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
1.94076
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1888/1658/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-09 16:54:52) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in range(size(x)):
	if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- EXECUTION TIME:
1.36083
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1888/1658/main.py", line 4, in <module>
    x = array(eval(input())).split(',')
  File "<string>", line 1, in <module>
NameError: name 'JPN' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-09 16:54:54) 
-- CODE:
from numpy import * 
from numpy.linalg import *
y = zeros(5 ,dtype=int)
x = array(eval(input("paises:"))).split(',')
for i in range(size(x)):
	if(x[i]=="CHN"):
	   y[0]=y[0]+1
	if(x[i]=="JPN"):
		y[1]=y[1]+1
	if(x[i]=="KOR"):
		y[2]=Y[2]+1
	if(x[i]=="MGL"):
		y[3]==y[3]+1
	if(x[i]=="THA"):
		y[4]==y[4]+1
print(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
